
5.1.0 -> 5.2a0:
    - jbj: permit upgrade erasure of old -debuginfo iff all other packages
	built from same *.src.rpm are not present. Note that this patch
	assumes that -debuginfo will be added after all other packages
	built from same *.src.rpm.
    - jbj: add automagic erasures of -debuginfo packages (#447708).
    - jbj: enable -lgcrypt through ./devtool system.
    - jbj: hdrfmt: achieve coverage over new header format extensions.
    - jbj: rpmrepo: add baseurl to the repo markup.
    - jbj: rpmrepo: populate sqlite schema with PACKAGESIZE and PACKAGEDIGEST.
    - jbj: simple parameterized namespace URI for Pkgid/Hdrid UUID generation.
    - jbj: rpmrepo: compute digests for both compressed & uncompressed
	repository markup components.
    - jbj: leagacy: eliminate (unused) domd5(). use dodigest instead.
    - jbj: update sv.po from the Translation Project.
    - jbj: add SOURCERPM name at end-of-parse for --specfile queries and errmsg.
    - jbj: upgrade to DB 4.7.25:
	Change to 4.6 -> 4.7 in configure.ac & tools/Makefile.am
	Rename to rep_auto.c in tools/Makefile.am
    - jbj: autogen.sh: change the USAGE strings to simplify maintenance. tool
	versions only need to be edited in one place.
    - jbj: autogen.sh: fix arg stripping for 1.* libtoolize.
    - rse: enhance RPM_CHECK_LIB to query pkg-config(1) --libs-only-L to get -L<dir> options, too.
    - rse: be smart and allow one to still build RPM from CVS with old GNU libtool 1.5.x
    - rse: explicitly let one to force one of BeeCrypt/GCrypt/NSS/OpenSSL as the crypto implementation
    - rse: implicitly choose one of BeeCrypt/GCrypt/NSS/OpenSSL as the crypto implementation
    - rse: add an Autoconf --with-usecrypto={beecrypt,gcrypt,nss,openssl} build-time option
    - rse: allow one to build against the GCrypt based crypto implementation out-of-the-box
    - rse: more robust argument checking for CLI option --usecrypto
    - rse: add support for "lib<name>-config" and "lib<name>.pc" in RPM_CHECK_LIB